# flask-wtform-tutorial

./: .env.example  .gitignore  Makefile  Pipfile  README.md  app.py  config.py  deploy.sh  forms.py  gunicorn.conf.py  pyproject.toml  requirements.txt  setup.py  start.sh  wsgi.py
.github/: dependabot.yml
application/: __init__.py  forms.py  routes.py
application/static/css/: forms.css
application/templates/: contact.jinja2  index.jinja2  layout.jinja2  success.jinja2
flask_wtf_tutorial/: __init__.py  routes.py
flask_wtf_tutorial/templates/: analytics.jinja2  layout.html
flask_wtforms_tutorial/: __init__.py  forms.py  routes.py
flask_wtforms_tutorial/static/css/: forms.css  home.css  style.css  success.css
flask_wtforms_tutorial/templates/: contact.jinja2  index.jinja2  layout.jinja2  signup.jinja2  success.jinja2
static/css/: home.css  style.css  success.css
templates/: contact.html  index.html  layout.html  signup.html  success.html
