[tool.poetry]
name = "flask_wtforms_tutorial"
version = "0.1.0"
description = "Tutorial to implement forms in your Flask app."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/flask-wtforms-forms/"
repository = "https://github.com/hackersandslackers/flask-wtform-tutorial/"
documentation = "https://hackersandslackers.com/flask-wtforms-forms/"
keywords = [
    "Flask",
    "Forms",
    "Flask-WTF",
    "MVC",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask-wtf = "*"
python-dotenv = "*"
email_validator = "*"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
lesscpy = "*"
cssmin = "*"
jsmin = "*"
pytest = "*"
black = "^21.12b0"
isort = "^5.8.0"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/flask-wtform-tutorial/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

