[tool.poetry]
name = "flask_wtforms_tutorial"
version = "0.1.1"
description = "Tutorial to implement forms in your Flask app."
authors = ["Todd Birchard <todd@gmail.com>"]
maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/flask-wtforms-forms/"
repository = "https://github.com/hackersandslackers/flask-wtform-tutorial/"
documentation = "https://hackersandslackers.com/flask-wtforms-forms/"
keywords = ["Flask", "Forms", "Flask-WTF", "MVC", "Tutorial"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = "*"
flask-wtf = "*"
python-dotenv = "*"
email_validator = "*"
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"
gunicorn = "*"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/flask-wtform-tutorial/issues"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"

[tool.black]
line-length = 120
